--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
 
+  camera: ^0.11.0+2
+  path_provider: ^2.0.9
+  path: ^1.8.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
