--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/non-picture.png
     - assets/background.png
     - assets/rare.png
+    - assets/monster-over.png
 
   #   - images/a_dot_ham.jpeg
 
