--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/background.png
     - assets/rare.png
     - assets/monster-over.png
+    - assets/last.png
 
   #   - images/a_dot_ham.jpeg
 
